      an OpenCandy-enabled version.  The OC account is currently
      maintained by Bill Kendrick <nbs@sonic.net>, lead developer.

      For more info, see http://www.tuxpaint.org/docs/opencandy/

    * Using $LDFLAGS when linking Magic tool plugins and Tux Paint binary.
      Volkov Peter <volkov_peter@users.sourceforge.net> (SF.Net Bug #3389067)

  * Accessibility Improvements:
    ---------------------------
    * Added a mouse accessibility mode to avoid the need to drag the mouse.
      ("--mouse-accessibility")
      by Ankit Choudary <ankit.goaldecided@gmail.com> (GSOC 2010)
      with integration and fixes by
      Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * Added an option to display an on-screen keyboard when using the
      'Text' and 'Label' tools.  ("--onscreen-keyboard") [Experimental!]
      by Ankit Choudary <ankit.goaldecided@gmail.com> (GSOC 2010) with 
      integration and fixes by Pere Pujal i Carabantes <perepujal@gmail.com>
      and some code borrowed from xorg (keysymdef.h and en_US.UTF-8_COMPOSE
      Authors?) 
      and xterm file keysym2ucs.c (function keysym2unicode   
      Markus G. Kuhn <mkuhn@acm.org>, University of Cambridge, April 2001
      Special thanks to Richard Verhoeven <river@win.tue.nl>
      Public domain.

      FIXME:
        * When refreshing a draw full of labels flickers a lot.
        * "Caps" label perhaps should show an up-arrow (a la
          old Mac keyboards?) (Unicode U+21CE or U+21EA?)
        * Replace "Shift" with an arrow? (Unicode U+21E7)
        * "Back" label perhaps should be a delete left-arrow?
          (Unicode U+232B)
        * "Enter" should probably be replaced with a carriage return
          down-then-left-arrow. (Unicode U+21B5 or U+23CE)

    * Keyboard can be used to move and click mouse ("keymouse").
      [Experimental!]
      by Ankit Choudary <ankit.goaldecided@gmail.com> (GSOC 2010)

      * Keys to move:
        * [Up] / [Down] / [Left] / [Right]